@@ -1,3 +1,2 @@
-VERSION=1.46
-
-YEARS=2001-2007
+#define VERSION "1.46"
+#define YEARS   "2005-2007"
