@@ -1,0 +1,3 @@
+#include "VERSION"
+SUBST(_CurVers_)(VERSION)
+SUBST(_CurYrs_)(YEARS)
