@@ -43,11 +43,18 @@ void install(string where)
     reqzip(where + DOC + "/man/", "tmp/manhtml/", "stealthman.html");
 
     printf("  installing the information directly in and under $DOC\n");
-    reqzip(where + DOC + "/", "./", "changelog README ACKNOWLEDGEMENTS");
+    reqzip(where + DOC + "/", "./", "changelog");
+    run("cp README ACKNOWLEDGEMENTS " + where + DOC);
 
     printf("  installing scripts\n");
-    md(where + DOC + "/scripts");
-    reqzip(where + DOC + "/scripts/", "./", "stealthmail");
+    md(where + DOC + "/scripts/etc/logrotate.d");
+    reqzip(where + DOC + "/scripts/etc/logrotate.d/", 
+                                        "share/etc/logrotate.d/", "target");
+    md(where + DOC + "/scripts/etc/stealth");
+    reqzip(where + DOC + "/scripts/etc/stealth/", "share/etc/stealth/", 
+                                                                "cleanup.rc");
+    md(where + DOC + "/scripts/usr/sbin");
+    rungzip9("share/usr/sbin/", where + DOC + "/scripts/usr/sbin/");
 
     printf("  installing examples\n");
     md(where + DOC + "/examples");
