@@ -11,6 +11,8 @@ stealth (1.46)
     Provded the stealthmail script with a sorting filter, filtering only the
     ADDED, MODIFIED and DELETED messages from mail generated by stealth.
 
+    Version distribution changed. Latest version should be set in VERSION
+
 stealth (1.45)
 
   * The previously used scripts below make/ are obsolete and were removed from
